# yolo_cpp

./: .gitignore  CMakeLists.txt  readme.md
include/: LockFreeQueue.hpp  ffmpeg.hpp
lib/: darknet.lib
src/: Net_config.h  ThreadPool.hpp  ffmpeg_video.hpp  main.cpp  utils.h  yolo_cmx.h
